Refactor training package and add new training scripts
- Commented out unused imports in `src/training/__init__.py`.
- Added `src/training/configs.py` for PPO hyperparameters and training configuration.
- Created `src/training/train_hybrid.py` for hybrid training with PPO.
- Implemented `src/training/train_ppo.py` for standard PPO training.
- Developed `src/training/train_robust.py` for robust hybrid training with domain randomization.
- Added `src/training/train_robust_ppo.py` for robust PPO training with domain randomization.
- Updated `src/utils/__init__.py` to include a new `TrajectoryGenerator` class.
- Introduced `src/utils/trajectories.py` for generating target trajectories.
- Created `test_optitrack.py` to test OptiTrack connection and rigid body tracking.
- Implemented `test_tello_setup.py` to verify Tello connection and functionality.
- Added `visualize_trajectory.py` for visualizing actual vs target drone trajectories.

--- a/.gitignore
+++ b/.gitignore
@@ -43,12 +43,12 @@ venv.bak/
 # Training outputs
 logs/
 runs/
-models/*.zip
-models/ppo/*.zip
-models/hybrid/*.zip
-!models/ppo/README.md
-!models/hybrid/README.md
-*.pkl
+# models/*.zip
+# models/ppo/*.zip
+# models/hybrid/*.zip
+# !models/ppo/README.md
+# !models/hybrid/README.md
+# *.pkl
 *.pth
 *.pt
 
@@ -89,7 +89,7 @@ mlruns/
 
 # Large files
 *.tar.gz
-*.zip
+# *.zip
 *.h5
 
 # OS
